# dot_viewer

./: .gitignore  CMakeLists.txt  README.md
include/: dotparser.h  graphmodel.h  graphview.h  mainwindow.h
src/: dotparser.cpp  graphmodel.cpp  graphview.cpp  main.cpp  mainwindow.cpp
